# idp

./: .gitignore  README.md
rs/: .gitignore  Cargo.toml  Makefile  README.md  notes.md
rs/examples/pl/: Cargo.toml
rs/examples/pl/src/: lib.rs  main.rs
rs/examples/pl/tests/: pl_tests.rs
rs/examples/sig/: Cargo.toml
rs/examples/sig/src/: key_type.rs  lib.rs  owned_data.rs  signed_plum.rs  signed_plum_builder.rs  signed_plum_content.rs  signed_plum_content_hash.rs
rs/examples/sig/tests/: sig_tests.rs
rs/idp/: Cargo.toml  Makefile  README.md
rs/idp-gui/: Cargo.toml  README.md
rs/idp-gui/src/: app.rs  content_preview.rs  content_view.rs  lib.rs  main.rs  message.rs  path_state_preview.rs  path_state_table_view.rs  plum_head_seal_view.rs  plum_preview.rs  plum_table_view.rs  plum_view.rs
rs/idp-gui/src/widget/: grid.rs
rs/idp/src/: lib.rs
rs/idp/tests/: client_server.rs  idp_tests.rs
rs/idp_client/: Cargo.toml  Makefile  README.md
rs/idp_client/src/: idp_client.rs  lib.rs
rs/idp_core/: .env  Cargo.toml  Makefile  README.md  diesel-migration  notes.md
rs/idp_core/examples/: pl.rs
rs/idp_core/migrations/2021-08-20-102150_create_plum_heads_and_plum_bodies/: down.sql  up.sql
rs/idp_core/src/: branch_error.rs  branch_node.rs  branch_node_builder.rs  datacache.rs  datahost.rs  datahost_storage.rs  datahost_storage_error.rs  dir_node.rs  fragment.rs  idp_client.rs  lib.rs  load_plum_and_deserialize_error.rs  models.rs  path_state_error.rs  plum_ref.rs  plum_uri.rs  relation.rs  schema.rs
rs/idp_core/tests/: basic_datahost_functionality.rs  idp_core_tests.rs
rs/idp_datahost_storage/: Cargo.toml
rs/idp_datahost_storage/src/: datahost_storage.rs  datahost_storage_error.rs  datahost_storage_transaction.rs  lib.rs
rs/idp_datahost_storage_sqlite/: .env  .gitignore  Cargo.toml  README.md
rs/idp_datahost_storage_sqlite/migrations/: 20230216070258_create-tables.down.sql  20230216070258_create-tables.up.sql  20230223220630_create-path_states.down.sql  20230223220630_create-path_states.up.sql  20230425050203_create-tables.down.sql  20230425050203_create-tables.up.sql
rs/idp_datahost_storage_sqlite/src/: datahost_storage_sqlite.rs  datahost_storage_sqlite_transaction.rs  lib.rs  models.rs
rs/idp_proto/: Cargo.toml  Makefile  README.md  build.rs
rs/idp_proto/proto/: idp.proto
rs/idp_proto/src/: builder.rs  content.rs  content_class.rs  content_classifiable.rs  content_encoding.rs  content_format.rs  content_metadata.rs  content_type.rs  content_typeable.rs  contentifiable.rs  deserializable.rs  hashable.rs  lib.rs  nonce.rs  path.rs  plum.rs  plum_body.rs  plum_body_builder.rs  plum_body_seal.rs  plum_builder.rs  plum_head.rs  plum_head_builder.rs  plum_head_seal.rs  plum_metadata.rs  plum_metadata_seal.rs  plum_relation.rs  plum_relation_flags.rs  plum_relation_flags_mapping.rs  plum_relation_flags_raw.rs  plum_relational.rs  plum_relations.rs  plum_relations_builder.rs  plum_relations_seal.rs  plum_verify_error.rs  relation.rs  seal.rs  serializable.rs  sha256sum.rs  unix_nanoseconds.rs
rs/idp_proto/tests/: all.rs  idp_proto_tests.rs
rs/idp_server/: Cargo.toml  Makefile  README.md
rs/idp_server/src/: idp_server.rs  lib.rs  state.rs
rs/idp_sig/: Cargo.toml
rs/idp_sig/src/: did.rs  jws.rs  lib.rs  plum_sig.rs  plum_sig_content.rs  plum_sig_content_hash.rs
rs/idp_sig/tests/: idp_sig_tests.rs
