[package]
name = "idp-gui"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
chrono = "0.4.19"
env_logger = "0.10.0"
iced = { version = "0.9.0", features = ["image", "debug"] }
iced_aw = { version = "0.5.2", features = ["badge", "grid"] }
iced_native = "0.10"
idp_core = { path = "../idp_core", features = ["format-json"] }
idp_datahost_storage_sqlite = { path = "../idp_datahost_storage_sqlite" }
idp_proto = { path = "../idp_proto", features = [
    "format-json",
    "nonce-generate",
] }
idp_sig = { path = "../idp_sig" }
maplit = "1.0.2"
# This is a temp measure to handle futures without having to invoke a full async runtime.  It blocks on async
# operations, which is not what you want to be doing in UI code.
pollster = "0.3.0"
# Only the binary should choose a "runtime-*" feature for sqlx.
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
