[package]
name = "idp"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["idp_core/client"]
server = ["dep:idp_server"]
sqlite = ["dep:idp_datahost_storage_sqlite"]

# This crate really just combines the separate idp_* crates into one.
[dependencies]
idp_core = { path = "../idp_core" }
idp_datahost_storage_sqlite = { path = "../idp_datahost_storage_sqlite", optional = true }
idp_proto = { path = "../idp_proto" }
idp_server = { path = "../idp_server", optional = true }

[dev-dependencies]
anyhow = "1.0.69"
async-lock = "2.6.0"
env_logger = "0.8.4"
idp_datahost_storage_sqlite = { path = "../idp_datahost_storage_sqlite" }
log = "0.4.14"
serial_test = "0.5.1"
tokio = { version = "1.25.0", features = [
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "net",
] }
tonic = { version = "0.8.3", features = ["tls"] }
uuid = { version = "0.8.2", features = ["v4"] }
