[package]
name = "idp_core"
version = "0.0.0"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.19", features = ["serde"] }
# So far, this is only used in the examples.
derive_more = "0.99.17"
diesel = { version = "1.4.7", features = ["numeric", "sqlite"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
idp_proto = { path = "../idp_proto" }
lazy_static = "1.4.0"
log = "0.4.14"
parking_lot = "0.12.1"
rmp-serde = "0.15.5"
serde = { version = "1.0.126", features = ["derive"] }

[dev-dependencies]
env_logger = "0.8.4"
maplit = "1.0.2"
serial_test = "0.5.1"
uuid = { version = "0.8.2", features = ["v4"] }
