[package]
name = "idp_core"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2021"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["idp_proto/client", "dep:tokio-stream", "tonic"]
encoding-deflate = ["idp_proto/encoding-deflate"]
encoding-gzip = ["idp_proto/encoding-gzip"]
format-json = ["idp_proto/format-json"]
format-msgpack = ["idp_proto/format-msgpack"]
tonic = ["idp_datahost_storage/tonic", "dep:tonic"]

[dependencies]
anyhow = "1.0.69"
async-lock = "2.6.0"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.17"
idp_datahost_storage = { path = "../idp_datahost_storage", features = [
    "tonic",
] }
idp_proto = { path = "../idp_proto" }
lazy_static = "1.4.0"
log = "0.4.14"
maplit = "1.0.2"
serde = { version = "1.0.126", features = ["derive"] }
sync-unsafe-cell = "0.1.0"
thiserror = "1.0.38"
tokio-stream = { version = "0.1.11", optional = true }
tonic = { version = "0.8.3", features = ["tls"], optional = true }

[dev-dependencies]
# Always use this -- it gives much more useful backtraces when tests fail.
anyhow = { version = "1", features = ["backtrace"] }
ctor = "0.1.21"
env_logger = "0.8.4"
idp_datahost_storage_sqlite = { path = "../idp_datahost_storage_sqlite" }
maplit = "1.0.2"
serial_test = "0.5.1"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.2", features = ["v4"] }
