[package]
name = "idp_datahost_storage"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2021"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# This enables the SqlxError variant of DatahostStorageError.
sqlx-error = ["dep:sqlx"]
# This enables conversion of DatahostStorageError to tonic::Status.
tonic = ["dep:tonic"]

[dependencies]
async-trait = "0.1.64"
derive_more = "0.99.17"
idp_proto = { path = "../idp_proto" }
sqlx = { version = "0.6.2", default-features = false, features = [
    "runtime-tokio-native-tls",
], optional = true }
thiserror = "1.0.38"
tonic = { version = "0.8.3", features = ["tls"], optional = true }
