[package]
name = "idp_proto"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["dep:tonic"]
server = ["dep:tonic"]

[dependencies]
anyhow = "1.0.69"
bitflags = "1.3.2"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.17"
num-derive = "0.3"
num-traits = "0.2"
prost = "0.11.0"
rmp-serde = "0.15.5"
serde = { version = "1.0.126", features = ["derive"] }
sha2 = "0.9.5"
thiserror = "1.0.38"
tonic = { version = "0.8.3", features = ["tls"], optional = true }

# This is for building protobufs and GRPC service from .proto files
[build-dependencies]
tonic-build = { version = "0.8.3", features = ["prost"] }

[dev-dependencies]
env_logger = "0.8.4"
log = "0.4.14"
uuid = { version = "0.8.2", features = ["v4"] }
