[package]
name = "idp_server"
version = "0.0.0"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
maplit = "1.0.2"
tonic = { version = "0.4.3", features = ["tls"] }
idp_proto = { path = "../idp_proto" }
