[package]
name = "idp_server"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-lock = "2.6.0"
chrono = { version = "0.4.19", features = ["serde"] }
futures = { version = "0.3", default-features = false }
h2 = "0.3"
idp_core = { path = "../idp_core", features = ["tonic"] }
idp_proto = { path = "../idp_proto", features = ["server"] }
log = "0.4.14"
maplit = "1.0.2"
# NOTE: This will go away when branch methods are put into Datahost
rmp-serde = "1.1.1"
tokio = "1.25.0"
tokio-stream = "0.1.11"
tonic = { version = "0.8.3", features = ["tls"] }
