[package]
name = "pl"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-lock = "2.6.0"
async-trait = "0.1.64"
derive_more = "0.99.17"
idp_core = { path = "../../idp_core" }
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }

[dev-dependencies]
ctor = "0.1.21"
env_logger = "0.8.4"
idp_datahost_storage_sqlite = { path = "../../idp_datahost_storage_sqlite" }
idp_proto = { path = "../../idp_proto" }
rmp-serde = "0.15.5"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
